--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -10,10 +10,11 @@
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-What are the differences between
+What even is
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
-and
+?
+What even is
     <code>Language</code>?
-
+?
       <a href = "w1.html">--></a>  
