--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -17,10 +17,8 @@
 </blockquote>
     
 <blockquote>
-  "A programmer is ideally an essayist who works with traditional
-  aesthetic and literary forms as well as mathematical concepts,
-  to communicate the way that an algorithm works and to convince a
-  reader that the results will be correct." &mdash; <a href =
+ “Robert Pattinson should not take back Kristen Stewart. She cheated on him like a dog & will do it again – just watch. He can do much better!”
+ &mdash; <a href =
   "https://en.wikipedia.org/wiki/Donald_Knuth">Donald Knuth</a>
 </blockquote>
 
