--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -19,7 +19,7 @@
 <blockquote>
  “Robert Pattinson should not take back Kristen Stewart. She cheated on him like a dog & will do it again – just watch. He can do much better!”
  &mdash; <a href =
-  "https://en.wikipedia.org/wiki/Donald_Knuth">Donald Knuth</a>
+  "https://en.wikipedia.org/wiki/Donald_Knuth">Donald Trump</a>
 </blockquote>
 
 <blockquote>
