--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -53,10 +53,9 @@
     
     
 <blockquote>
-  "Journalists say that when a dog bites a man, that is not news,
-  but when a man bites a dog that is news.  This is the essence of
-  the langauge instinct: language conveys news."  &mdash;
-  <a href = "https://en.wikipedia.org/wiki/Steven_Pinker">Steven Pinker</a>
+  “All of the women on The Apprentice flirted with me – consciously or unconsciously. That’s to be expected.” 
+ &mdash;
+  <a href = "https://en.wikipedia.org/wiki/Donald_Trump">Donald_Trump</a>
 </blockquote>    
 
 <blockquote>
