--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -32,12 +32,9 @@
 <h3>Quotes on Language</h3>
 
 <blockquote>
-  "Because the process of knowing is inseparable from
-  "languaging," in the new education, language (i.e., all forms of
-  symbolic codification) is regarded as the mediator of all human
-  perception and is used as a unifying and continuing focus of all
-  student inquiry."
-  &mdash; <a href = "https://en.wikipedia.org/wiki/Neil_Postman"> Neil Postman</a>
+  "My IQ is one of the highest — and you all know it! Please don't feel so stupid or insecure; it's not your fault."
+
+  &mdash; <a href = "https://en.wikipedia.org/wiki/Donald_Trump"> Donald Trump</a>
   and
   <a href = "https://en.wikipedia.org/wiki/Charles_Weingartner">Charles Weingartner</a>
 </blockquote>
