--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -36,7 +36,9 @@
       <li>A means for human communication:
         <ul>
           <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Sign Language</a></li>
+           <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Sign Language</a></li>
           <li><a href="https://en.wikipedia.org/wiki/Spoken_language">Spoken Language</a> </li>
+          <li><a href="https://en.wikipedia.org/wiki/Amy_Adams">Amy Adams</a> </li>
           <li><a href ="http://mediengeschichte.dnb.de/DBSMZBN/Web/EN/Navigation/SoundsSymbolsScript/sounds_symbols_script_doorpage.html">Written Language</a></li>
         </ul>
       </li>
