--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -38,7 +38,7 @@
           <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Sign Language</a></li>
            <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Sign Language</a></li>
           <li><a href="https://en.wikipedia.org/wiki/Spoken_language">Spoken Language</a> </li>
-          <li><a href="https://en.wikipedia.org/wiki/Amy_Adams">Amy Adams</a> </li>
+         <li><a href="https://en.wikipedia.org/wiki/Isla_Fisher">Isla Fisher</a></li>
           <li><a href ="http://mediengeschichte.dnb.de/DBSMZBN/Web/EN/Navigation/SoundsSymbolsScript/sounds_symbols_script_doorpage.html">Written Language</a></li>
         </ul>
       </li>
